--- a/public/style.css
+++ b/public/style.css
@@ -2,27 +2,32 @@
 
 
 .btn {
-    margin-right: .5em;
+    margin-right: 5px;
+    margin-top: 5px;
+}
+
+.column {
+
 }
 
 .gridPage-container {
     display: flex;
-    
+
 }
 
-.input-group {
+.search-input{
     margin-right: 10px;
+    margin-top: 5px;
 }
 
 .search-btns {
     margin-top: .25em;
     display: flex;
-    
+
 }
 
 .sidebar {
     background-color: lightslategray;
-    width: 25vw; 
-
+    width: 25vw;
+    padding: 10px;
 }
-
